--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Portuguese literature -- 16th century'
 - !lcc 'PQ'
 - !lcsh 'Portuguese poetry -- Classical period, 1500-1700'
+- GITenberg
 title: Obras Completas de Luis de Camões, Tomo III
 url: http://www.gutenberg.org/ebooks/37192
